--- a/src/app/event-list/event-list.component.html
+++ b/src/app/event-list/event-list.component.html
@@ -1,15 +1,19 @@
-<p>list works!</p>
 <!--<app-event-card *ngFor="let event of eventsService.events"></app-event-card>-->
-<!--<div class="card-list">-->
-  <ul>
-    <li *ngFor="let event of eventsService.events">
-      <p>{{event.name}}</p>
-      <p>{{event.startDate | date:'MM/dd/yyyy'}}</p>
-      <p>{{event.venue}}</p>
-      <a href="{{event.link}}">Event Link</a>
-      <p>Performers: <p *ngFor="let performer of event.performers">{{performer.name}}</p>
-    </li>
-  </ul>
+<div class="card-list">
+<!--  loop through event objects loop-->
+    <div class="event-card" *ngFor="let event of eventsService.events">
+<!--      source picture for event card-->
+      <img [src]="event.picture" alt="Avatar" style="width:100%">
+<!--      Show info for specific event-->
+      <div class="event-info">
+        <p>{{event.name}}</p>
+        <p>{{event.startDate | date:'MM/dd/yyyy'}}</p>
+        <p>{{event.venue}}</p>
+        <a href="{{event.link}}">Event Link</a>
+        <p>Performers: <p *ngFor="let performer of event.performers">{{performer.name}}</p>
+      </div>
+    </div>
+</div>
 <!--  <div class="pagination">-->
 <!--    Page {{pages[0]?.number + 1}} of {{pages[0]?.size + 1}}-->
 <!--  </div>-->
