enhancements and styling

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,6 +16,14 @@
   }
 }
 
+div#app-search {
+  width: 100%;
+}
+
+div#page-title {
+  padding-left: 20px;
+}
+
 main {
   width: 100%;
   min-height: 100%;
