--- a/src/app/event-list/event-list.component.html
+++ b/src/app/event-list/event-list.component.html
@@ -17,11 +17,18 @@
       <img [src]="event.picture" alt="Avatar" style="width:100%">
 <!--      Show info for specific event-->
       <div class="event-info">
-        <p>{{event.name}}</p>
-        <p>{{event.startDate | date:'MM/dd/yyyy'}}</p>
+        <h3>{{event.name}}</h3>
         <p>{{event.venue}}</p>
-        <a href="{{event.link}}">Event Link</a>
-        <p>Performers: <p *ngFor="let performer of event.performers">{{performer.name}}</p>
+        <!--        Date format: Fri, Apr 12 • 7:30 PM-->
+        <p>{{event.startDate | date:'EEE, MMM d • h:mm a'}}</p>
+        <span>Performers: </span>
+    <span *ngFor="let performer of event.performers; let i=index">
+      <span>{{performer.name}}</span><span class="list-format" *ngIf="i!=event.performers.length-1">, </span>
+    </span>
+        <div class="ticket-link">
+        <a class="tickets-button" mat-flat-button href="{{event.link}}" target="_blank">Find Tickets</a>
+        </div>
+<!--        <p>Performers: <p *ngFor="let performer of event.performers">{{performer.name}}</p>-->
       </div>
     </div>
 </div>
